CAMBIOS DE ERRORES DE TIPEO

--- a/traveris-front/src/app/components/dashboard/dashboard.html
+++ b/traveris-front/src/app/components/dashboard/dashboard.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="p-2 text-center bg-light">
-        <small class="text-muted" style="font-size: 0.65rem;">Centro de Notificaciones Vicka Turismo</small>
+        <small class="text-muted" style="font-size: 0.65rem;">Centro de Notificaciones</small>
       </div>
     </div>
   </div>
